--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,7 +18,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.4;
-  background-color: #072222;
+  background-color: #081a33;
   color: #ffffff;
   font-size: 18px;
 }
@@ -36,6 +36,10 @@ a {
   background-color: #a2d7d5;
   border: 2px solid #46a49f;
   cursor: pointer;
+}
+
+.h1 {
+  font-size: 2rem;
 }
 
 .big {
@@ -135,5 +139,17 @@ a {
           align-items: center;
   border: 2px solid #1eea2d;
   cursor: pointer;
+}
+
+.marked {
+  background-color: #1a53a2;
+}
+
+.correct {
+  background-color: #0d8616;
+}
+
+.wrong {
+  background-color: #b81148;
 }
 /*# sourceMappingURL=App.css.map */
