--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -16,7 +16,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.4;
-    background-color: rgb(7, 34, 34);
+    background-color: #081a33;
     color: #ffffff;
     font-size: 18px;
 }
@@ -35,7 +35,9 @@ a {
     border: 2px solid #46a49f;
     cursor: pointer;
 }
-
+.h1 {
+    font-size: 2rem;
+}
 .big {
     font-size: 5rem;
 }
@@ -98,4 +100,14 @@ a {
     align-items: center;
     border: 2px solid #1eea2d;
     cursor: pointer;
+}
+.marked {
+    // background-color: #0d8616;
+    background-color: #1a53a2;
+}
+.correct {
+    background-color: #0d8616;
+}
+.wrong {
+    background-color: #b81148;
 }
