--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -90,6 +90,19 @@ a {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
+  position: relative;
+}
+
+.loader-icon {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 10px solid #f55474;
+  border-top: 10px solid #950924;
+  -webkit-animation: loading 2s linear infinite;
+          animation: loading 2s linear infinite;
+  position: absolute;
+  margin: auto 40.9%;
 }
 
 /* ---------------------------------------------------
@@ -157,5 +170,29 @@ a {
 
 .wrong {
   background-color: #b81148;
+}
+
+/* ---------------------------------------------------
+    ANIMATIONS
+----------------------------------------------------- */
+@-webkit-keyframes loading {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@keyframes loading {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 /*# sourceMappingURL=App.css.map */
