feat: add finish quiz button, deleted submit button

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -41,6 +41,11 @@ a {
 .big {
     font-size: 5rem;
 }
+.btn-disabled {
+    background-color: #45a09c;
+    border: 2px solid #245553;
+    cursor: initial;
+}
 
 /* ---------------------------------------------------
     MAIN VIEW
@@ -132,6 +137,13 @@ a {
 .wrong {
     background-color: #b81148;
 }
+/* ---------------------------------------------------
+    STATISTICS
+----------------------------------------------------- */
+// .finish-quiz-btn {
+//     display: none;
+// }
+
 /* ---------------------------------------------------
     ANIMATIONS
 ----------------------------------------------------- */
