--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -46,6 +46,12 @@ a {
   font-size: 5rem;
 }
 
+.btn-disabled {
+  background-color: #45a09c;
+  border: 2px solid #245553;
+  cursor: initial;
+}
+
 /* ---------------------------------------------------
     MAIN VIEW
 ----------------------------------------------------- */
@@ -172,6 +178,9 @@ a {
   background-color: #b81148;
 }
 
+/* ---------------------------------------------------
+    STATISTICS
+----------------------------------------------------- */
 /* ---------------------------------------------------
     ANIMATIONS
 ----------------------------------------------------- */
